--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "security": "nsp check",
-    "build": "npm run clean && webpack",
-    "clean": "rimraf dist"
+    "build": "webpack",
+    "serve": "webpack-dev-server",
+    "start": "npm run security && npm run serve"
   },
   "repository": {
     "type": "git",
@@ -24,14 +25,13 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
-    "rimraf": "^2.6.1",
+    "nsp": "^2.8.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.6",
     "webpack-dev-server": "~2.7.1"
   },
-  "dependencies": {
-    "nsp": "^2.8.0"
-  }
+  "dependencies": {}
 }
