--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
+    "eslint": "^4.7.1",
     "html-webpack-plugin": "^2.30.1",
     "nsp": "^2.8.0",
     "style-loader": "^0.18.2",
