--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,19 +1,18 @@
 {
-	// See http://go.microsoft.com/fwlink/?LinkId=827846
-	// for the documentation about the extensions.json format
-	"recommendations": [
-		// Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
-		"HookyQR.beautify",
-		"joelday.docthis",
-		"EditorConfig.editorconfig",
-		"dbaeumer.vscode-eslint",
-		"eg2.tslint",
-		"robertohuertasm.vscode-icons",
-		"christian-kohler.path-intellisense",
+  // See http://go.microsoft.com/fwlink/?LinkId=827846
+  // for the documentation about the extensions.json format
+  "recommendations": [
+    // Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
+    "HookyQR.beautify",
+    "joelday.docthis",
+    "EditorConfig.editorconfig",
+    "eg2.tslint",
+    "robertohuertasm.vscode-icons",
+    "christian-kohler.path-intellisense",
     // Others Worth Maybe Getting
     "formulahendry.auto-rename-tag",
     "CoenraadS.bracket-pair-colorizer",
-    "formulahendry.code-runner",
+    "formulahendry.code-runner", // maybe?
     "naumovs.color-highlight",
     "anseki.vscode-color",
     "pranaygp.vscode-css-peek",
