--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "security": "nsp check",
-    "build": "webpack",
-    "serve": "webpack-dev-server",
+    "build": "webpack -p",
+    "serve": "webpack-dev-server --open",
     "start": "npm run security && npm run serve"
   },
   "repository": {
@@ -21,16 +21,15 @@
   },
   "homepage": "https://github.com/znalbert/mobb#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.16",
+    "concurrently": "^3.5.0",
     "css-loader": "^0.28.7",
-    "eslint": "^4.7.1",
     "html-webpack-plugin": "^2.30.1",
     "nsp": "^2.8.0",
     "style-loader": "^0.18.2",
+    "ts-loader": "^3.1.1",
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.1",
     "webpack": "^3.5.6",
     "webpack-dev-server": "~2.7.1"
   },
