--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "security": "nsp check",
-    "build": "webpack -p",
-    "serve": "webpack-dev-server --open",
+    "build": "ts-node buildscripts/buildProd.ts",
+    "serve": "webpack-dev-server --config webpack.config.dev.ts",
     "start": "npm run security && npm run serve"
   },
   "repository": {
@@ -21,13 +21,19 @@
   },
   "homepage": "https://github.com/znalbert/mobb#readme",
   "devDependencies": {
+    "@types/clean-webpack-plugin": "^0.1.0",
+    "@types/html-webpack-plugin": "^2.30.1",
+    "@types/node": "^8.0.53",
+    "@types/webpack": "^3.8.1",
+    "@types/webpack-dev-server": "^2.9.2",
+    "chalk": "^2.3.0",
     "clean-webpack-plugin": "^0.1.16",
-    "concurrently": "^3.5.0",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
     "nsp": "^2.8.0",
     "style-loader": "^0.18.2",
     "ts-loader": "^3.1.1",
+    "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1",
     "webpack": "^3.5.6",
