--- a/package.json
+++ b/package.json
@@ -39,5 +39,12 @@
     "webpack": "^3.5.6",
     "webpack-dev-server": "~2.7.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "redux": "^3.7.2"
+  }
 }
