--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "security": "nsp check",
-    "build": "ts-node buildscripts/buildProd.ts",
-    "serve": "webpack-dev-server --config webpack.config.dev.ts",
+    "build": "node buildscripts/buildProd.js",
+    "serve": "webpack-dev-server --config ./buildscripts/webpack.config.dev.js",
     "start": "npm run security && npm run serve"
   },
   "repository": {
@@ -24,8 +24,12 @@
     "@types/clean-webpack-plugin": "^0.1.0",
     "@types/html-webpack-plugin": "^2.30.1",
     "@types/node": "^8.0.53",
+    "@types/react": "^16.0.25",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^5.0.14",
     "@types/webpack": "^3.8.1",
     "@types/webpack-dev-server": "^2.9.2",
+    "awesome-typescript-loader": "^3.4.0",
     "chalk": "^2.3.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
