--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1",
+    "uglifyjs-webpack-plugin": "^1.1.4",
     "webpack": "^3.5.6",
     "webpack-dev-server": "~2.7.1"
   },
