--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "ts-loader": "^3.1.1",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
+    "tslint-eslint-rules": "^4.1.1",
+    "tslint-react": "^3.2.0",
     "typescript": "^2.6.1",
     "uglifyjs-webpack-plugin": "^1.1.4",
     "webpack": "^3.5.6",
