--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/clean-webpack-plugin": "^0.1.0",
     "@types/html-webpack-plugin": "^2.30.1",
+    "@types/lodash": "^4.14.91",
     "@types/node": "^8.0.53",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
@@ -34,7 +35,9 @@
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
     "nsp": "^2.8.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "ts-loader": "^3.1.1",
     "ts-node": "^3.3.0",
