--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "security": "nsp check",
     "build": "node buildscripts/buildProd.js",
     "serve": "webpack-dev-server --config ./buildscripts/webpack.config.dev.js",
-    "start": "npm run security && npm run serve"
+    "start": "npm run serve"
   },
   "repository": {
     "type": "git",
@@ -36,7 +36,6 @@
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.9.0",
-    "nsp": "^2.8.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.18.2",
     "ts-loader": "^3.5.0",
