--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "webpack-dev-server": "~2.7.1"
   },
   "dependencies": {
-    "lodash": "^4.17.10",
+    "ramda": "^0.25.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
